[tool.poetry]
name = "py_dl"
version = "0.1.0"
description = ""
authors = ["Tho Nguyen <ndtho8205@gmail.com>"]
readme = "README.md"
repository = ""

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.6.1"
flake8-bugbear = "^21.9.1"
flake8-eradicate = "^1.1.0"
flake8-bandit = "^2.1.2"
flake8-pytest-style = "^1.5.0"
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.10.2"
darglint = "^1.8.0"
safety = "^1.10.3"
pyupgrade = "^2.26.0"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
length_sort = true
sections = "FUTURE,TYPING,STDLIB,TEST,THIRDPARTY,SECONDPARTY,FIRSTPARTY,LOCALFOLDER"
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
known_test = "pytest,pytest_mock"
known_secondparty = ""
known_firstparty = "py_dl"

[tool.black]
line-length = 90
target-version = ["py37"]

[tool.pylint.MASTER]
jobs = 1
extension-pkg-whitelist = ""

[tool.pylint.BASIC]
module-naming-style = "any"

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.pylint."SIMILARITIES"]
min-similarity-lines = 6
ignore-imports = "yes"

[tool.pylint.DESIGN]
max-args = 10
